# ExecutionContractProtocol

./: .custodian.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.console/: backlog.md  guidelines.md  log.md
.custodian/: config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cxrp/: __init__.py
cxrp/contracts/: __init__.py  common.py  evidence.py  execution_request.py  execution_result.py  lane_decision.py  runtime_binding.py  task_proposal.py
cxrp/validation/: json_schema.py
cxrp/vocabulary/: artifact.py  capability.py  lane.py  runtime.py  status.py
docs/architecture/: boundary_rules.md  compatibility.md  lifecycle.md  migration_from_ecp.md
docs/integrations/: operations_center.md  operator_console.md  switchboard.md
docs/spec/: v0.1.md  v0.2.md
ecp/: __init__.py
ecp/contracts/: __init__.py  execution_request.py  execution_result.py  lane_decision.py  task_proposal.py
ecp/validation/: __init__.py  json_schema.py
ecp/vocabulary/: __init__.py  artifact.py  lane.py  status.py
examples/v0.1/: execution_request.basic.json  execution_result.failure.json  execution_result.success.json  lane_decision.basic.json  task_proposal.basic.json
examples/v0.2/: execution_request.basic.json  execution_result.failure.json  execution_result.success.json  lane_decision.basic.json  task_proposal.basic.json
schemas/v0.1/: execution_request.schema.json  execution_result.schema.json  task_proposal.schema.json
tests/: conftest.py  test_capability.py  test_contracts.py  test_ecp_shim.py  test_evidence.py  test_runtime_binding.py
(+8 files in other folders)
