[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cxrp"
version = "0.2.0"
description = "CxRP — Contract × Request Protocol for execution-bound workflows. Contract-only models, schemas, and vocabulary."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["cxrp*"]

[tool.setuptools.package-data]
"cxrp.schemas" = ["**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
